--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
 body {
   background-color: #f8f8f8;
   margin: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+    sans-serif;
 }
 
 h1,
